--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,11 @@
 {
-    "tabWidth": 2,
-    "useTabs": false,
-    "arrowParens": "avoid",
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "singleAttributePerLine": true,
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ]
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "avoid",
+  "trailingComma": "es5",
+  "semi": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "singleAttributePerLine": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
